--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "cloudrunhttp": "node ./dist/app.js --port 8080 --nossl",
+    "cloudrunhttp": "node ./dist/app.js --port 8080 --nossl"
   },
   "author": "",
   "license": "ISC",
