--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/luxon": "^3.2.0",
     "compression": "^1.7.4",
     "express": "^4.18.2",
+    "express-compression": "^1.0.2",
     "luxon": "^3.2.1",
     "optimist": "^0.6.1",
     "pg": "^8.8.0",
